Improving home screen to update data whenever it is loaded

--- a/web/app/root/home.tpl.html
+++ b/web/app/root/home.tpl.html
@@ -1,13 +1,13 @@
 <div class="inner-view-frame">
   <div class="container-fluid bg-white allow-select">
-    <h3 class="text-primary">Welcome to {{ model.application.title }} version {{ model.application.version }}</h3>
+    <h3 class="text-primary">Welcome to {{ session.application.title }} version {{ session.application.version }}</h3>
     <div class="container-fluid">
       You are currently logged on as
-      <strong>{{ model.user.firstName }} {{ model.user.lastName }}</strong>
+      <strong>{{ session.user.firstName }} {{ session.user.lastName }}</strong>
       under the role of
-      <strong>{{ model.role.name }}</strong>
+      <strong>{{ session.role.name }}</strong>
       for the
-      <strong>{{ model.site.name }}</strong>
+      <strong>{{ session.site.name }}</strong>
       site.<br>
       <span class="text-warning">
         Use of any account other than your own is prohibited.
@@ -15,26 +15,26 @@
       </span>
     </div>
     <div class="vertical-spacer"></div>
-    <div ng-if="model.user.lastActivity" class="container-fluid">
+    <div ng-if="session.user.lastActivity" class="container-fluid">
       You were last logged in from
-      <strong>{{ model.user.lastActivity.start_datetime | cnDatetime:'datetimesecond' }}</strong>
+      <strong>{{ session.user.lastActivity.start_datetime | cnDatetime:'datetimesecond' }}</strong>
       until
-      <strong>{{ model.user.lastActivity.end_datetime | cnDatetime:'datetimesecond' }}</strong>
+      <strong>{{ session.user.lastActivity.end_datetime | cnDatetime:'datetimesecond' }}</strong>
       under the role of 
-      <strong>{{ model.user.lastActivity.roleName }}</strong>
+      <strong>{{ session.user.lastActivity.roleName }}</strong>
       for the
-      <strong>{{ model.user.lastActivity.siteName }}</strong>
+      <strong>{{ session.user.lastActivity.siteName }}</strong>
       site.
     </div>
     <div class="vertical-spacer"></div>
     <h3 class="text-primary">System Status</h3>
-    <div ng-if="model.application.developmentMode" class="container-fluid text-warning">
+    <div ng-if="session.application.developmentMode" class="container-fluid text-warning">
       This application is currently in development mode.
     </div>
     <div class="container-fluid">
-      There {{ 1 == model.application.activeUsers ? "is" : "are" }} currently
-      {{ model.application.activeUsers }} active user{{ 1 == model.application.activeUsers ? "" : "s" }},
-      {{ model.site.activeUsers }} of which {{ 1 == model.application.activeUsers ? "is" : "are" }}
+      There {{ 1 == session.application.activeUsers ? "is" : "are" }} currently
+      {{ session.application.activeUsers }} active user{{ 1 == session.application.activeUsers ? "" : "s" }},
+      {{ session.site.activeUsers }} of which {{ 1 == session.application.activeUsers ? "is" : "are" }}
       logged into your site.
     </div>
     <div class="container-fluid">
@@ -49,7 +49,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr ng-repeat="session in model.sessionList">
+          <tr ng-repeat="session in session.sessionList">
             <td>{{ session.address }}</td>
             <td>{{ session.site }}</td>
             <td>{{ session.role }}</td>
@@ -60,11 +60,11 @@
     </div>
     <div class="vertical-spacer"></div>
     <h3 class="text-primary">System Messages</h3>
-    <div class="container-fluid" ng-repeat="message in model.messageList">
+    <div class="container-fluid" ng-repeat="message in session.messageList">
       <h4><i class="glyphicon glyphicon-envelope"></i> {{ message.title }}</h4>
       <blockquote class="text-info" style="white-space: pre-wrap;">{{ message.note }}</blockquote>
     </div>
-    <div ng-if="0 == model.messageList.length">
+    <div ng-if="0 == session.messageList.length">
       <blockquote class="text-info" style="white-space: pre-wrap;">There are no messages.</blockquote>
     </div>
   </div>
