Adding record-list reports.
This update includes several improvements and changes including:
  - better use of Content-Type in web-api
  - report icons added to all lists
  - new util::get_data_as_csv() method
  - new business\report::load_data() method
  - new business\report::get_cell_value() method

--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -8,7 +8,7 @@
       <div class="pull-right">
         <i class="glyphicon glyphicon-refresh glyph-hover btn-primary btn-header"
            ng-if="isComplete"
-           ng-click="refresh()"
+           ng-click="refresh(); $event.stopPropagation()"
            tooltip="Click to refresh data"
            tooltip-placement="left"></i>
         <i class="glyphicon glyph-hover btn-primary btn-header"
