--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -11,6 +11,24 @@
            ng-click="refresh(); $event.stopPropagation()"
            tooltip="Click to refresh data"
            tooltip-placement="left"></i>
+        <span class="dropdown report-dropdown">
+          <i class="glyphicon glyphicon-file glyph-hover btn-header"
+             ng-class="model.listModel.cache.length && !model.listModel.isReportLoading ?
+               'btn-primary' : 'glyph-disabled'"
+             ng-if="!model.listModel.isLoading && !model.listModel.chooseMode"
+             id="reportTypeList"
+             ng-click="toggleReportTypeDropdown(); $event.stopPropagation()"
+             data-toggle="dropdown"
+             tooltip="Click to download list as a report"
+             tooltip-placement="left"></i>
+          <ul ng-if="model.listModel.cache.length && !model.listModel.isReportLoading"
+              class="dropdown-menu dropdown-menu-right"
+              aria-labelledby="reportTypeList">
+            <li><a ng-click="getReport( 'xlsx' ); $event.stopPropagation()">Excel</a></li>
+            <li><a ng-click="getReport( 'ods' ); $event.stopPropagation()">LibreOffice</a></li>
+            <li><a ng-click="getReport( 'csv' ); $event.stopPropagation()">CSV</a></li>
+          </ul>
+        </span>
         <i class="glyphicon glyph-hover btn-primary btn-header"
            ng-class="collapsed ? 'glyphicon-collapse-down' : 'glyphicon-collapse-up'"
            tooltip="Click to expand {{ model.module.name.singular }} list"
@@ -142,20 +160,7 @@
               {{ model.listModel.total }}
               {{ 1 == model.listModel.total ? model.module.name.singular : model.module.name.plural }} total
             </span>
-            <button class="btn btn-default pull-right"
-                    ng-if="model.addEnabled && !model.chooseEnabled"
-                    ng-click="addRecord()">
-              <i class="glyphicon glyphicon-plus"></i> Add
-            </button>
-            <button class="btn btn-default pull-right"
-                    ng-if="model.chooseEnabled"
-                    ng-class="model.listModel.chooseMode ? 'btn-success' : 'btn-default'"
-                    ng-click="model.listModel.toggleChooseMode()">
-              <i class="glyphicon glyphicon-edit"
-                 ng-class="model.listModel.chooseMode ? 'glyphicon-check' : 'glyphicon-edit'"></i>
-              {{ model.listModel.chooseMode ? 'Done' : 'Choose' }}
-            </button>
-            <div class="btn-group pull-right">
+            <div class="btn-group pull-right" ng-if="!model.chooseEnabled">
               <button class="btn btn-default"
                       type="button"
                       ng-repeat="op in model.module.extraOperationList.list"
@@ -164,7 +169,20 @@
                       ng-class="op.classes"
                       toolip="op.help"
                       ng-click="op.operation( $state, model )">{{ op.title }}</button>
+              <button class="btn btn-default pull-right"
+                      ng-if="model.addEnabled"
+                      ng-click="addRecord()">
+                <i class="glyphicon glyphicon-plus"></i> Add
+              </button>
             </div>
+            <button class="btn btn-default pull-right"
+                    ng-if="model.chooseEnabled"
+                    ng-class="model.listModel.chooseMode ? 'btn-success' : 'btn-default'"
+                    ng-click="model.listModel.toggleChooseMode()">
+              <i class="glyphicon glyphicon-edit"
+                 ng-class="model.listModel.chooseMode ? 'glyphicon-check' : 'glyphicon-edit'"></i>
+              {{ model.listModel.chooseMode ? 'Done' : 'Choose' }}
+            </button>
           </td>
         </tr>
       </tfoot>
@@ -175,12 +193,7 @@
       {{ model.listModel.total }}
       {{ 1 == model.listModel.total ? model.module.name.singular : model.module.name.plural }} total
     </span>
-    <button class="btn btn-default pull-right"
-            ng-if="model.addEnabled && !model.chooseEnabled"
-            ng-click="addRecord()">
-      <i class="glyphicon glyphicon-plus"></i> Add
-    </button>
-    <div class="btn-group pull-right">
+    <div class="btn-group pull-right" ng-if="!model.chooseEnabled">
       <button class="btn btn-default"
               type="button"
               ng-repeat="op in model.module.extraOperationList.list"
@@ -189,6 +202,11 @@
               ng-class="op.classes"
               tooltip="{{ op.help }}"
               ng-click="op.operation( $state, model )">{{ op.title }}</button>
+      <button class="btn btn-default"
+              ng-if="model.addEnabled"
+              ng-click="addRecord()">
+        <i class="glyphicon glyphicon-plus"></i> Add
+      </button>
     </div>
   </div>
 </div>
