--- a/web/app/cenozo/modal-account.tpl.html
+++ b/web/app/cenozo/modal-account.tpl.html
@@ -66,7 +66,7 @@
     </div>
   </div>
   <div class="modal-footer bg-info">
-    <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
+    <button type="button" class="btn btn-default" ng-if="allowCancel" ng-click="cancel()">Cancel</button>
     <button type="submit" class="btn btn-primary"
             ng-disabled="form.email.$error.format || form.$invalid">OK</button>
   </div>
