Minor fixes to home page

--- a/web/app/root/home.tpl.html
+++ b/web/app/root/home.tpl.html
@@ -6,12 +6,12 @@
       <strong>{{ session.user.firstName }} {{ session.user.lastName }}</strong>
       under the role of
       <strong>{{ session.role.name }}</strong>
-      for the
+      at the
       <strong>{{ session.site.name }}</strong>
       site.<br>
       <span class="text-warning">
         Use of any account other than your own is prohibited.
-        If this is not you please <a href="?logout">click here</a> to log in.
+        If this is not you please <a style="cursor:pointer" ng-click="session.logout()">click here</a> to log in.
       </span>
     </div>
     <div class="vertical-spacer"></div>
@@ -21,9 +21,9 @@
       until
       <strong>{{ session.user.lastActivity.end_datetime | cnDatetime:'datetimesecond' }}</strong>
       under the role of 
-      <strong>{{ session.user.lastActivity.roleName }}</strong>
-      for the
-      <strong>{{ session.user.lastActivity.siteName }}</strong>
+      <strong>{{ session.user.lastActivity.role_name }}</strong>
+      at the
+      <strong>{{ session.user.lastActivity.site_name }}</strong>
       site.
     </div>
     <div class="vertical-spacer"></div>
