--- a/web/app/root/home.tpl.html
+++ b/web/app/root/home.tpl.html
@@ -31,46 +31,49 @@
           <strong>{{ session.user.lastActivity.site_name }}</strong>
           site.
         </div>
+        <div class="vertical-spacer"></div>
+        <h3 class="text-primary">System Status</h3>
+        <div ng-if="session.application.developmentMode" class="container-fluid text-warning">
+          This application is currently in development mode.
+        </div>
+        <div class="container-fluid">
+          There {{ 1 == session.application.activeUsers ? "is" : "are" }} currently
+          {{ session.application.activeUsers }} active user{{ 1 == session.application.activeUsers ? "" : "s" }},
+          {{ session.site.activeUsers }} of which {{ 1 == session.application.activeUsers ? "is" : "are" }}
+          logged into your site.
+        </div>
+        <div class="container-fluid">
+          Your list of active sessions include:
+          <table class="table table-condensed table-hover">
+            <thead class="bg-info">
+              <tr>
+                <td>Address</td>
+                <td>Site</td>
+                <td>Role</td>
+                <td>Last Access</td>
+              </tr>
+            </thead>
+          <tbody>
+            <tr ng-repeat="session in session.sessionList">
+              <td>{{ session.address }}</td>
+              <td>{{ session.site }}</td>
+              <td>{{ session.role }}</td>
+              <td>{{ session.datetime | cnDatetime:'datetimesecond' }}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-      <div class="col-sm-4">
+      <div class="vertical-spacer"></div>
+      </div>
+      <div class="col-sm-4 hidden-xs">
         <h3>
-          <img src="img/branding.small.png" class="img-responsive" onerror="this.style.display='none'" alt="" />
+          <img ng-src="{{ cenozoUrl }}/img/branding.small.png"
+               class="img-responsive"
+               onerror="this.style.display='none'"
+               alt="" />
         </h3>
       </div>
     </div>
-    <div class="vertical-spacer"></div>
-    <h3 class="text-primary">System Status</h3>
-    <div ng-if="session.application.developmentMode" class="container-fluid text-warning">
-      This application is currently in development mode.
-    </div>
-    <div class="container-fluid">
-      There {{ 1 == session.application.activeUsers ? "is" : "are" }} currently
-      {{ session.application.activeUsers }} active user{{ 1 == session.application.activeUsers ? "" : "s" }},
-      {{ session.site.activeUsers }} of which {{ 1 == session.application.activeUsers ? "is" : "are" }}
-      logged into your site.
-    </div>
-    <div class="container-fluid">
-      Your list of active sessions include:
-      <table class="table table-condensed table-hover">
-        <thead class="bg-info">
-          <tr>
-            <td>Address</td>
-            <td>Site</td>
-            <td>Role</td>
-            <td>Last Access</td>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="session in session.sessionList">
-            <td>{{ session.address }}</td>
-            <td>{{ session.site }}</td>
-            <td>{{ session.role }}</td>
-            <td>{{ session.datetime | cnDatetime:'datetimesecond' }}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="vertical-spacer"></div>
     <h3 class="text-primary">System Messages</h3>
     <div class="container-fluid" ng-repeat="message in session.messageList">
       <h4><i class="glyphicon glyphicon-envelope"></i> {{ message.title }}</h4>
