Removing heading attribute from record-add/calendar/list/view directives

--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-primary rounded-top"><h4>{{ heading }}</h4></div>
+<div class="container-fluid bg-primary rounded-top"><h4>{{ model.addModel.heading }}</h4></div>
 <form name="form" class="form-horizontal" novalidate>
   <div class="form-body">
     <div ng-repeat="group in dataArray">
