Adding features to extra operations
Adding new isIncluded() and isDisabled() methods to extra operations
Adding search and multiedit operations to participant list
Fixing bug in participant.multiedit which was only seen in Mastodon

--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -171,7 +171,8 @@
                       type="button"
                       ng-repeat="op in model.module.extraOperationList.list"
                       id="{{ op.id }}"
-                      ng-disabled="op.disabled"
+                      ng-if="op.isIncluded( $state, model )"
+                      ng-disabled="op.isDisabled( $state, model )"
                       ng-class="op.classes"
                       toolip="op.help"
                       ng-click="op.operation( $state, model )">{{ op.title }}</button>
