Calling isDisabled and isIncluded in record-* templates (missed from earlier commit)

--- a/web/app/cenozo/record-calendar.tpl.html
+++ b/web/app/cenozo/record-calendar.tpl.html
@@ -33,7 +33,8 @@
               type="button"
               ng-repeat="op in model.module.extraOperationList.calendar"
               id="{{ op.id }}"
-              ng-disabled="op.disabled"
+              ng-if="op.isIncluded( $state, model )"
+              ng-disabled="op.isDisabled( $state, model )"
               ng-class="op.classes"
               tooltip="{{ op.help }}"
               ng-click="op.operation( $state, model )">{{ op.title }}</button>
