--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -360,7 +360,8 @@
                 type="button"
                 ng-repeat="op in model.module.extraOperationList.view"
                 id="{{ op.id }}"
-                ng-disabled="op.disabled"
+                ng-if="op.isIncluded( $state, model )"
+                ng-disabled="op.isDisabled( $state, model )"
                 ng-class="op.classes"
                 tooltip="{{ op.help }}"
                 ng-click="op.operation( $state, model )">{{ op.title }}</button>
