Tweaking variable names in multiedit to match similar code in Mastodon

--- a/web/app/participant/multiedit.tpl.html
+++ b/web/app/participant/multiedit.tpl.html
@@ -32,11 +32,11 @@
             </span>
           </span>
         </div>
-        <textarea id="uidList"
-                  name="uidList"
+        <textarea id="uidListString"
+                  name="uidListString"
                   cn-elastic
-                  ng-change="model.uidListChanged()"
-                  ng-model="model.uidList"
+                  ng-change="model.uidListStringChanged()"
+                  ng-model="model.uidListString"
                   ng-disabled="model.confirmInProgress"
                   class="form-control no-rounding"></textarea>
         <div class="form-footer text-right rounded-bottom bg-info">
