Participant multiedit: resizing participant selection box after confirming the list

--- a/web/app/participant/multiedit.tpl.html
+++ b/web/app/participant/multiedit.tpl.html
@@ -43,7 +43,7 @@
           <button type="button"
                   class="btn btn-primary"
                   ng-disabled="null != model.confirmedCount || model.confirmInProgress"
-                  ng-click="model.confirm()">Confirm List</button>
+                  ng-click="confirm()">Confirm List</button>
         </div> 
       </div>
       <div ng-if="model.confirmedCount">
