A few more minor adjustments related to the last commit

--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -7,7 +7,7 @@
            style="margin-bottom:2px; cursor:pointer;">
         <h4>{{ group.title }}</h4>
       </div>
-      <ng-form ng-repeat="input in group.inputList"
+      <ng-form ng-repeat="input in group.inputArray"
                ng-if="true != input.exclude && 'add' != input.exclude && 'hidden' != input.type"
                name="innerForm">
         <div class="form-group"
