--- a/web/app/cenozo/notes.tpl.html
+++ b/web/app/cenozo/notes.tpl.html
@@ -10,6 +10,19 @@
       <span ng-if="model.isLoading">(Loading&hellip;)</span>
     </h4>
   </div>
+  <div ng-if="5 < model.noteList.length" class="form-footer text-right bg-info">
+    <button type="button"
+            class="btn btn-default pull-left"
+            ng-if="model.viewHistory"
+            ng-click="model.viewHistory()">
+      History
+    </button>
+    <button type="button"
+            class="btn btn-primary"
+            ng-click="model.viewRecord()">
+      View {{ model.module.name.singular.ucWords() }}
+    </button>
+  </div> 
   <div class="container-fluid">
     <cn-loading ng-if="model.isLoading"></cn-loading>
     <div class="spacer" ng-if="!model.isLoading">
