Allowing users to select error text

--- a/web/app/error/state.tpl.html
+++ b/web/app/error/state.tpl.html
@@ -1,5 +1,5 @@
 <div class="inner-view-frame">
-  <div class="container-fluid bg-white">
+  <div class="container-fluid bg-white allow-select">
     <h3 class="text-primary">State Not Found</h3>
     <div class="container-fluid">
       <blockquote>
