--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -60,12 +60,18 @@
                              'glyphicon-circle-arrow-up' : 'glyphicon-circle-arrow-down'"></i>
               </button>
               <ul class="dropdown-menu" ng-class="{'dropdown-menu-right': $last}" role="menu">
-                <li><a href="#" ng-click="model.listModel.orderBy( column.key )">
+                <li ng-init="reverse = null !== model.listModel.order &&
+                                       model.listModel.order.column == column.key &&
+                                       !model.listModel.order.reverse">
+                  <a href="#" ng-click="model.listModel.orderBy( column.key,
+                                          null !== model.listModel.order &&
+                                          model.listModel.order.column == column.key &&
+                                          !model.listModel.order.reverse )">
                     Sort {{ null !== model.listModel.order &&
                             model.listModel.order.column == column.key &&
-                            !model.listModel.order.reverse ?
-                            'Descending' : 'Ascending' }}
-                </a></li>
+                            !model.listModel.order.reverse ? 'Descending' : 'Ascending' }}
+                  </a>
+                </li>
                 <li>
                   <a href="#"
                      ng-click="setRestrictList( column.key )"
