Adding {search} query parameter to "notes" actions

--- a/web/app/cenozo/notes.tpl.html
+++ b/web/app/cenozo/notes.tpl.html
@@ -50,8 +50,8 @@
           <div class="col-sm-10">
             <input class="form-control"
                    type="text"
-                   ng-model="search"
-                   ng-change="model.updateSearch( search )"
+                   ng-model="model.search"
+                   ng-change="model.updateSearch()"
                    autocomplete="off"></input>
           </div>
         </div>
