--- a/web/app/participant/history.tpl.html
+++ b/web/app/participant/history.tpl.html
@@ -19,7 +19,10 @@
       </p>
       <div class="btn-group btn-group-justified">
         <div ng-repeat="category in historyCategoryArray | filter:{ framework: true }" class="btn-group">
-          <button class="btn btn-default" ng-model="category.active" btn-checkbox>
+          <button class="btn btn-default"
+                  ng-model="category.active"
+                  ng-change="model.toggleCategory( category.name )"
+                  btn-checkbox>
             {{ category.name }}
             <i class="glyphicon" ng-class="category.active ? 'glyphicon-check' : 'glyphicon-unchecked'"></i>
           </button>
@@ -27,7 +30,10 @@
       </div>
       <div class="btn-group btn-group-justified">
         <div ng-repeat="category in historyCategoryArray | filter:{ framework: false }" class="btn-group">
-          <button class="btn btn-default" ng-model="category.active" btn-checkbox>
+          <button class="btn btn-default"
+                  ng-model="category.active"
+                  ng-change="model.toggleCategory( category.name )"
+                  btn-checkbox>
             {{ category.name }}
             <i class="glyphicon" ng-class="category.active ? 'glyphicon-check' : 'glyphicon-unchecked'"></i>
           </button>
