--- a/web/app/participant/multiedit.tpl.html
+++ b/web/app/participant/multiedit.tpl.html
@@ -95,18 +95,6 @@
                               ng-model="input.value"
                               class="form-control"
                               ng-required="input.required"></select>
-                      <input ng-switch-when="date"
-                             ng-attr-id="{{ input.column }}"
-                             name="name"
-                             ng-model="input.value"
-                             type="hidden"
-                             ng-required="input.required"></input>
-                      <input ng-switch-when="date"
-                             ng-model="input.formattedValue"
-                             class="form-control"
-                             type="text"
-                             ng-click="model.selectDatetime( input )"
-                             onkeydown="return false"></input>
                       <span ng-if="innerForm.name.$invalid && innerForm.name.$dirty">
                         <span class="help-block" ng-if="innerForm.name.$error.required">
                           Cannot be blank
@@ -186,13 +174,13 @@
                               ng-model="input.value"
                               class="form-control"
                               ng-required="input.required"></select>
-                      <input ng-switch-when="date"
+                      <input ng-switch-when="datetimesecond"
                              ng-attr-id="{{ input.column }}"
                              name="name"
                              ng-model="input.value"
                              type="hidden"
                              ng-required="input.required"></input>
-                      <input ng-switch-when="date"
+                      <input ng-switch-when="datetimesecond"
                              ng-model="input.formattedValue"
                              class="form-control"
                              type="text"
